--- a/TTT/index.html
+++ b/TTT/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="stylesheet" href="./css/style.css">
     <script
     src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
-    <script defer src=".js/script.js"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <script defer src="./js/script.js"></script>
     <title>Tic Tac Toe</title>
 </head>
 <body>
@@ -20,20 +19,20 @@
     <main>
         <h2>X's Turn</h2>
         <section id="gameboard">
-          <div class="square bottom"></div>
-          <div class="square bottom left right">X</div>
-          <div class="square bottom"></div>
-          <div class="square"></div>
-          <div class="square left right">X</div>
-          <div class="square"></div>
-          <div class="square top"></div>
-          <div class="square top left right">X</div>
-          <div class="square top"></div>
+            <div data-index="0" class="square bottom"></div>
+            <div data-index="1" class="square bottom left right">X</div>
+            <div data-index="2" class="square bottom"></div>
+            <div data-index="3" class="square"></div>
+            <div data-index="4" class="square left right">X</div>
+            <div data-index="5" class="square"></div>
+            <div data-index="6" class="square top"></div>
+            <div data-index="7" class="square top left right">X</div>
+            <div data-index="8" class="square top"></div>
         </section>
         <button>Reset</button>
-        </main>
-        <footer>
-            <p>Copyright &copy; All Right Reserved Tic Tac Toe 2021</p>
-        </footer>
+    </main>
+    <footer>
+        <p>Copyright &copy; All Rights Reserved Tic Tac Toe 2021</p>
+    </footer>
 </body>
 </html>
