--- a/dev-skills-lab/index.html
+++ b/dev-skills-lab/index.html
@@ -11,15 +11,17 @@ crossorigin="anonymous"></script>
 <script defer src="/script.js"></script>
     
 </head>
-<body class = "container">
-  <title>Dev Skills Lab</title>
-  <h1 class = "title">My Dev Skills</h1>
-  <ul class = "listParent" id="list">
-      
-  </ul>
-  <div class = "inputs">
-      <input type= "text" class= "textBox" id= "text"></input>
-      <button class= "btn addSkill" id="newSkill">Add Skill</button> 
-  </div>
+<body>
+    <main>
+        <h1>My Dev Skills</h1>
+        <ul>
+
+        </ul>
+        <input type="text">
+        <button>Add Skill</button>
+    </main>
+</body>
+  
+  
 </body>
 </html>
