--- a/dev-skills-lab/index.html
+++ b/dev-skills-lab/index.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
 <html lang=“en”>
-<head>
-    <meta charset=“UTF-8">
-    <meta name=“viewport” content=“width=device-width, initial-scale=1.0">
-    <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
-    <script
-    src=“https://code.jquery.com/jquery-3.3.1.min.js”
-    integrity=“sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=”
-    crossorigin=“anonymous”></script>
-    <script defer src=“./js/script.js”></script>
-    <link rel=“stylesheet” href=“https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css”
-        integrity=“sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2” crossorigin=“anonymous”>
-    <link rel=“stylesheet” href=“./css/style.css”>
-</head>
-<body>
-<header>
-<h1>
-    MY DEVELOPER SKILLS
-</h1>
-</header>
-<div>
-    <ul id=“myList”>
-    </ul>
-<br>
-        <div class=‘skill’>
-            <input type=“text”  placeholder=''>
-        <button class=“submit”>Add Skill</button>
-    </div>
-</div>
-</body>
-</html>
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/style.css"> 
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
+    </script>
+    <script defer src=./js/script.js> </script> 
+</head> 
+    
+    <body>
+        <header>
+            <h1>My Developer Skills</h1> 
+        </header> 
+       
+            <div>
+            <ul id ='myList'></ul> 
+            <br>
+            <div class = 'skill' >
+            <input type = 'text' placeholder = ''>
+            <button class = 'submit'>Add Skill</button> 
+            </div> 
+            </div>
+    </body> 
+            </html>
